Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70966

Default base color is wrong on macOS Mojave in light mode

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.12.0 Beta 3
    • 5.12.0 Beta 1
    • Widgets: Styles
    • None
    • macOS
    • b88eaa255a4646446e0842f3d8f732b39d09a65f (qt/qtbase/5.12)

      The default base color changed from white to gray on macOS Mojave in light mode with one of the recent palette changes. It doesn't actually show up incorrectly in widgets by default, but when queried from the application palette the color is wrong.

      The attached minimal sample shows the problem. The output is "#ececec". It should be "#ffffff".

        For Gerrit Dashboard: QTBUG-70966
        # Subject Branch Project Status CR V

            sorvig Morten Sørvig
            jasonhaslam Jason Haslam
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes